[package]
name = "counting_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"] #dynamic and static library

[dependencies]
cosmwasm-std = "1.0.0" #cosmwasm standard library
cw-storage-plus = "1.0.1" #cosmwasm storage library (access to contract state)
serde = "1.0.0" #serialization library

[dev-dependencies]
cw-multi-test = "0.16.2" #cosmwasm testing library
